# crypto-intelligence-platform

./: .gitignore  AGENTS.md  README.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_ohlcv_unique_constraint.py  0003_expand_signals_for_phase3.py  0004_expand_alerts_for_phase4.py  0005_add_backtesting_tables.py  0006_add_paper_trading_tables.py  0007_add_auth_workspace_usage.py  0008_add_relative_strength_monitor.py  0009_news_broadcast.py
backend/app/: __init__.py  main.py
backend/app/alerts/: __init__.py  deduplication.py  evaluator.py  notification.py  rules.py  scheduler.py  severity.py
backend/app/api/: market_comparison.py  relative_strength_alerts.py  routes_ai.py  routes_alerts.py  routes_auth.py  routes_backtesting.py  routes_health.py  routes_market.py  routes_news.py  routes_paper_trading.py  routes_signals.py  routes_system.py  routes_usage.py  routes_users.py  routes_watchlists.py  routes_workspaces.py
backend/app/auth/: __init__.py  dependencies.py  password.py  permissions.py  rate_limit.py  tokens.py
backend/app/backtesting/: __init__.py  data_loader.py  engine.py  metrics.py  models.py  portfolio.py  risk.py  serialization.py  strategies.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
backend/app/data/: __init__.py
backend/app/db/: models.py  session.py
backend/app/indicators/: __init__.py  technicals.py
backend/app/observability/: __init__.py  health.py  logging.py  metrics.py  (+4 more)
(+346 files in other folders)
