[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-intelligence-platform-backend"
version = "0.1.0"
description = "Backend foundation for a crypto market intelligence and risk monitoring platform."
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13,<2.0",
    "apscheduler>=3.10,<4.0",
    "ccxt>=4.4,<5.0",
    "fastapi>=0.115,<1.0",
    "httpx>=0.27,<1.0",
    "numpy>=2.0,<3.0",
    "openai>=1.99,<3.0",
    "pandas>=2.2,<3.0",
    "prometheus-client>=0.20,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "pydantic-settings>=2.5,<3.0",
    "sentry-sdk>=2.0,<3.0",
    "slowapi>=0.1.9,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "structlog>=24.0,<26.0",
    "tenacity>=8.5,<10.0",
    "opentelemetry-api>=1.25,<2.0",
    "opentelemetry-sdk>=1.25,<2.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0,<1.0",
    "opentelemetry-instrumentation-sqlalchemy>=0.46b0,<1.0",
    "opentelemetry-exporter-otlp>=1.25,<2.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
